# civictwin_ai

./: .editorconfig  .firebaserc  .gitignore  CHANGELOG.md  DECISIONS.md  LICENSE  PROJECT_SETUP.md  README.md  demo_users.json  firebase.json
.firebase/: hosting.ZnJvbnRlbmRcYnVpbGRcd2Vi.cache
.github/workflows/: backend-ci.yml
.toolstate/flutter-appdata/.dart-tool/: CLIENT_ID  dart-flutter-telemetry-session.json  dart-flutter-telemetry.config
backend/: .env.example  .gcloudignore  Dockerfile  main.py  pyproject.toml  requirements.txt
backend/api/v1/: router.py
backend/api/v1/controllers/: mission.py
backend/config/: settings.py
backend/core/: exceptions.py  logging.py  security.py
backend/domain/models/: firestore.py
backend/domain/schemas/: requests.py  responses.py
backend/infrastructure/: firestore_repo.py  gemini_client.py
backend/prompts/: recommended_plan.txt
backend/scripts/: create_demo_user.py  generate_logo_assets.py  mock_data.py  seed_database.py
backend/services/: ai_pipeline.py  impact_engine.py  timeline_engine.py
backend/tests/: conftest.py  test_ai_pipeline.py  test_health.py  test_impact_engine.py  test_mission_controller.py  test_schemas.py  test_timeline_engine.py
firebase/: firestore.indexes.json  firestore.rules
frontend/: README.md  analysis_options.yaml  pubspec.yaml
frontend/assets/: map_style.json
frontend/lib/: app.dart  firebase_options.dart  main.dart
frontend/lib/core/constants/: app_config.dart
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
(+31 files in other folders)
