[project]
name = "civictwin-ai-backend"
version = "0.1.0"
description = "CivicTwin AI — FastAPI backend for spatial decision intelligence"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["backend"]
extend-exclude = [
    "*venv*",
    "__pycache__",
    "build",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import ordering)
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line length is enforced by the formatter, not the linter
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]  # allow assert in tests
"api/**/controllers/*" = ["B008"]  # FastAPI's Depends() default-arg pattern is idiomatic, not a bug

[tool.ruff.lint.isort]
known-first-party = ["config", "core", "api", "domain", "services", "infrastructure", "scripts"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra -q --strict-markers"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
